@@ -1,1 +1,1 @@
-<font size="-3">All contents copyright of the author. &copy;2009.</font>
+<font size="-3">All contents copyright of the author. &copy;2010.</font>
