@@ -1,1 +1,1 @@
-﻿<font size="-3">Alle Rechte an den Inhalten liegen beim Autor. &copy;2009.</font>
+﻿<font size="-3">Alle Rechte an den Inhalten liegen beim Autor. &copy;2010.</font>
