@@ -1,1 +1,1 @@
-<font size="-3">los derechos de todo el contenido pertenecen a su autor. &copy;2009.</font>
+<font size="-3">los derechos de todo el contenido pertenecen a su autor. &copy;2010.</font>
